fix menu position on mobile browsers

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -7,7 +7,7 @@
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
 
   display: flex;
   flex-direction: column;
